iptables
# Generated by iptables-save v1.4.7 on Fri Aug 24 11:51:09 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [182201:19956813]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 91 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 92 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 93 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 94 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 99 -j ACCEPT
-A OUTPUT -p tcp --dport 587 -j ACCEPT
-A OUTPUT -p tcp --sport 587 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Fri Aug 24 11:51:09 2018
